Updated another notebook

--- a/notebooks/10_MultiContainer.ipynb
+++ b/notebooks/10_MultiContainer.ipynb
@@ -4,28 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: MultiContainer with two sequential ShiftAmountActivities\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## MultiContainer + two sequential ShiftAmounts\n",
     "\n",
-    "----\n",
+    "In certain scenarios it is important to distinguish which types of objects are available in a container. __HasContainer__ does not provide this capability, while __MultiContainer__ does. \n",
     "\n",
-    "In certain scenarios it is important to distinguish which types of objects are available in a container. HasContainer does not provide this capability, while MultiContainer does. \n",
+    "A MultiContainer represents a named set of containers. The number of allowed containers is limited by parameter __store_capacity__.\n",
     "\n",
-    "A MultiContainer represents a named set of containers. The number of allowed containers is limited by parameter **store_capacity**.\n",
+    "For each container a name (__id___ property), a __capacity__ and __level__ is specified. \n",
     "\n",
-    "For each container a name (**id_** property), a **capacity** and **level** is specified. \n",
+    "A MultiContainer can be initialized with parameter __initials__ as provided in the example for site and vessel configuration below.\n",
     "\n",
-    "A MultiContainer can be initialized with parameter **initials** as provided in the example for site and vessel configuration below.\n",
-    "\n",
-    "In this example two ShiftAmountActivities are packed in a SequentialActivity, loading one piece of 'Cargo type 1' and one pieve of 'Cargo type 2' form 'from_site' to 'vessel01'."
+    "In this example two __ShiftAmountActivities__ are packed in a __SequentialActivity__, loading one piece of __Cargo type 1__ and one piece of __Cargo type 2__ from __from_site__ to __vessel01__."
    ]
   },
   {
@@ -141,7 +130,7 @@
     "                  \"store_capacity\": 4,\n",
     "                  \"initials\": [\n",
     "                                  {\"id\": \"Cargo type 1\", \"level\": 10, \"capacity\": 10},\n",
-    "                                  {\"id\": \"Cargo type 2\", \"level\": 5, \"capacity\": 5},\n",
+    "                                  {\"id\": \"Cargo type 2\", \"level\":  5, \"capacity\":  5},\n",
     "                              ],\n",
     "                 }\n",
     "# instantiate from_site \n",
@@ -1625,7 +1614,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1639,7 +1628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
