--- a/notebooks/17_SingleRun_with_WeatherCriterion.ipynb
+++ b/notebooks/17_SingleRun_with_WeatherCriterion.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: SingleRun with WeatherCriterion\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## SingleRun + WeatherCriterion\n",
     "\n",
-    "----\n",
-    "\n",
-    "This notebook provides an example of a simulation that takes a number of sub processes, grouped in a sequential activity, that is **executed while a stop condition is not yet met**. In this case the elements of the sub processes have weather limitations. A separate 'significant wave height' criterion is defined for moving and for amount shifting. \n",
+    "This notebook provides an example of a simulation that takes a number of __sub_processes__, grouped in a __SequentialActivity__, that is __executed while a stop condition is not yet met__. In this case the elements of the sub_processes have __weather limitations__. A separate 'significant wave height' criterion is defined for moving and for amount shifting. \n",
     "\n",
     "For this example we work with the following sub processes:\n",
     "* sailing empty\n",
@@ -5569,7 +5558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
