--- a/notebooks/18_SingleRun_with_HasDelayPlugin.ipynb
+++ b/notebooks/18_SingleRun_with_HasDelayPlugin.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: SingleRun with HasDelayPlugin\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## SingleRun + HasDelayPlugin\n",
     "\n",
-    "----\n",
-    "\n",
-    "This example notebook shows how you can integrate percentual delays in your simulation. We demonstrate how you can use the HasDelayPlugin, and how you can give it a certain delay percentage."
+    "This example notebook shows how you can integrate percentual delays in your simulation. We demonstrate how you can use the __HasDelayPlugin__, and how you can give it a certain __delay percentage__."
    ]
   },
   {
@@ -3189,7 +3178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3203,7 +3192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
