--- a/notebooks/10_MultiContainer.ipynb
+++ b/notebooks/10_MultiContainer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MultiContainer + two sequential ShiftAmounts\n",
+    "## MultiContainer + 2 ShiftAmounts\n",
     "\n",
     "In certain scenarios it is important to distinguish which types of objects are available in a container. __HasContainer__ does not provide this capability, while __MultiContainer__ does. \n",
     "\n",
