--- a/notebooks/24_cutters and barges.ipynb
+++ b/notebooks/24_cutters and barges.ipynb
@@ -5,7 +5,7 @@
    "id": "384a3d39",
    "metadata": {},
    "source": [
-    "## cutter + barges\n",
+    "## feeder concept: cutter + barges\n",
     "\n",
     "This notebook shows how to implement a basic feeder concept for a cutter suction dredge working with multiple barges."
    ]
