update post analysis with occupancy

--- a/notebooks/24_cutters and barges.ipynb
+++ b/notebooks/24_cutters and barges.ipynb
@@ -6949,10 +6949,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a7def889",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th># trips</th>\n",
+       "      <th>production actual</th>\n",
+       "      <th>production theory</th>\n",
+       "      <th>occupancy [%]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>barge_0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.000411</td>\n",
+       "      <td>0.000438</td>\n",
+       "      <td>93.8%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>barge_2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.000398</td>\n",
+       "      <td>0.000421</td>\n",
+       "      <td>94.6%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>barge_1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.000359</td>\n",
+       "      <td>0.000377</td>\n",
+       "      <td>95.1%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name  # trips  production actual  production theory occupancy [%]\n",
+       "0  barge_0        7           0.000411           0.000438         93.8%\n",
+       "2  barge_2        7           0.000398           0.000421         94.6%\n",
+       "1  barge_1        6           0.000359           0.000377         95.1%"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = []\n",
     "for i in range(len(vessels.values()) - 1):\n",
@@ -6961,13 +7030,21 @@
     "    sub_act = activity.sub_processes[0].sub_processes[-1]\n",
     "    log = pd.DataFrame(vessel.log)\n",
     "    nr_trips = len(log[(log.ActivityID == sub_act.id) & (log.ActivityState == \"START\")])\n",
+    "    \n",
+    "    # duration_theory = 4*sub_act.duration+ 5*sub_act.amount # ??????\n",
+    "    duration_theory = 0\n",
+    "    for sub_act in activity.sub_processes[0].sub_processes:\n",
+    "        duration_theory+=sub_act.duration\n",
+    "    \n",
+    "    duration_actual = (log.Timestamp.max() - log.Timestamp.min()).total_seconds()\n",
     "    data.append({\n",
     "        'name':vessel.name, \n",
-    "        'trips':nr_trips, \n",
-    "        'theoretical production': (sub_act.amount / (4*sub_act.duration+ 5*sub_act.amount)),\n",
-    "        'production':(nr_trips * sub_act.amount) / ((log.Timestamp.max() - log.Timestamp.min()).total_seconds()),\n",
+    "        '# trips':nr_trips, \n",
+    "        'production actual':(nr_trips * sub_act.amount) / (duration_actual),\n",
+    "        'production theory': (sub_act.amount / (duration_theory)),\n",
     "    })\n",
-    "df = pd.DataFrame(data).sort_values(by=['production'],ascending=False)\n",
+    "df = pd.DataFrame(data).sort_values(by=['production actual'],ascending=False)\n",
+    "df['occupancy [%]'] = [f'{x:.1f}%' for x in 100*df['production actual']/df['production theory']]\n",
     "df"
    ]
   },
