add post analysis cutter occupancy

--- a/notebooks/24_cutters and barges.ipynb
+++ b/notebooks/24_cutters and barges.ipynb
@@ -6949,7 +6949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "a7def889",
    "metadata": {},
    "outputs": [
@@ -6983,6 +6983,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cutter</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.001270</td>\n",
+       "      <td>0.002063</td>\n",
+       "      <td>61.6%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>barge_0</td>\n",
        "      <td>7</td>\n",
@@ -7012,24 +7020,32 @@
       ],
       "text/plain": [
        "      name  # trips  production actual  production theory occupancy [%]\n",
+       "3   cutter       20           0.001270           0.002063         61.6%\n",
        "0  barge_0        7           0.000411           0.000438         93.8%\n",
        "2  barge_2        7           0.000398           0.000421         94.6%\n",
        "1  barge_1        6           0.000359           0.000377         95.1%"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = []\n",
+    "duration_theory_cutter = 0\n",
+    "nr_trips_cutter = 0\n",
+    "\n",
+    "# barges\n",
     "for i in range(len(vessels.values()) - 1):\n",
     "    vessel = vessels[f'vessel{i}']\n",
     "    activity = activities[f'activity{i}']\n",
-    "    sub_act = activity.sub_processes[0].sub_processes[-1]\n",
+    "    sub_act = activity.sub_processes[0].sub_processes[-1] # loading (joint cutter-barge act)\n",
+    "    duration_theory_cutter += sub_act.duration*nr_trips\n",
+    "    \n",
     "    log = pd.DataFrame(vessel.log)\n",
     "    nr_trips = len(log[(log.ActivityID == sub_act.id) & (log.ActivityState == \"START\")])\n",
+    "    nr_trips_cutter += nr_trips\n",
     "    \n",
     "    # duration_theory = 4*sub_act.duration+ 5*sub_act.amount # ??????\n",
     "    duration_theory = 0\n",
@@ -7043,6 +7059,17 @@
     "        'production actual':(nr_trips * sub_act.amount) / (duration_actual),\n",
     "        'production theory': (sub_act.amount / (duration_theory)),\n",
     "    })\n",
+    "    \n",
+    "# cutter\n",
+    "log = pd.DataFrame(cutter.log)\n",
+    "duration_actual_cutter = (log.Timestamp.max() - log.Timestamp.min()).total_seconds()\n",
+    "data.append({\n",
+    "    'name':'cutter', \n",
+    "    '# trips':nr_trips_cutter, \n",
+    "    'production actual':(total_amount) / (duration_actual_cutter),\n",
+    "    'production theory':(total_amount) / (duration_theory_cutter),\n",
+    "})\n",
+    "    \n",
     "df = pd.DataFrame(data).sort_values(by=['production actual'],ascending=False)\n",
     "df['occupancy [%]'] = [f'{x:.1f}%' for x in 100*df['production actual']/df['production theory']]\n",
     "df"
