test with opentnsim + openclsim logging

--- a/notebooks/32_openclsim_opentnsim.ipynb
+++ b/notebooks/32_openclsim_opentnsim.ipynb
@@ -17,7 +17,10 @@
     "import openclsim\n",
     "import openclsim.model\n",
     "import opentnsim\n",
-    "import networkx as nx\n"
+    "import networkx as nx\n",
+    "\n",
+    "import logging\n",
+    "logging.basicConfig()"
    ]
   },
   {
@@ -36,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "3be50ba8",
    "metadata": {},
    "outputs": [],
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "bed66786",
    "metadata": {},
    "outputs": [],
@@ -160,7 +163,20 @@
    "execution_count": 9,
    "id": "485057d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mover vessel01 destination to_site\n",
+      "getting location from to_site\n",
+      "moving to POINT (4.25222222 52.11428333)\n",
+      "moving over  (<POINT (4.181 52.187)>, <POINT (4.252 52.114)>)\n",
+      "mover vessel01 is now at POINT (4.25222222 52.11428333)\n",
+      "mover vessel01 is now at POINT (4.25222222 52.11428333)\n"
+     ]
+    }
+   ],
    "source": [
     "# initate the simpy processes defined in the 'move activity' and run simpy\n",
     "openclsim.model.register_processes([activity])\n",
@@ -202,13 +218,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>74edfe04-f803-4508-aca0-869c02e835ca</td>\n",
+       "      <td>7017847c-7178-4b59-bc7d-95ae3bf5ba85</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>74edfe04-f803-4508-aca0-869c02e835ca</td>\n",
+       "      <td>7017847c-7178-4b59-bc7d-95ae3bf5ba85</td>\n",
        "      <td>1970-01-01 00:15:42.824591</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
@@ -218,8 +234,8 @@
       ],
       "text/plain": [
        "                               Activity                  Timestamp  \\\n",
-       "0  74edfe04-f803-4508-aca0-869c02e835ca 1970-01-01 00:00:00.000000   \n",
-       "1  74edfe04-f803-4508-aca0-869c02e835ca 1970-01-01 00:15:42.824591   \n",
+       "0  7017847c-7178-4b59-bc7d-95ae3bf5ba85 1970-01-01 00:00:00.000000   \n",
+       "1  7017847c-7178-4b59-bc7d-95ae3bf5ba85 1970-01-01 00:15:42.824591   \n",
        "\n",
        "  ActivityState  \n",
        "0         START  \n",
