--- a/notebooks/24_cutters and barges.ipynb
+++ b/notebooks/24_cutters and barges.ipynb
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "67fbd1c8",
+   "id": "07cf587d",
    "metadata": {},
    "outputs": [
     {
@@ -7977,7 +7977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 92,
    "id": "87cd1b2f",
    "metadata": {},
    "outputs": [
@@ -8004,7 +8004,7 @@
        "      <th></th>\n",
        "      <th>siteName</th>\n",
        "      <th>siteID</th>\n",
-       "      <th>siteType</th>\n",
+       "      <th>siteClass</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -8012,36 +8012,36 @@
        "      <th>0</th>\n",
        "      <td>Trench</td>\n",
        "      <td>05662201-fd19-4993-b9e7-45143fa67dd7</td>\n",
-       "      <td>&lt;class '__main__.Site'&gt;</td>\n",
+       "      <td>Site</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Reclamation</td>\n",
        "      <td>bd86fa23-b8ad-4ff4-ac37-40d2b1a69188</td>\n",
-       "      <td>&lt;class '__main__.Site'&gt;</td>\n",
+       "      <td>Site</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      siteName                                siteID                 siteType\n",
-       "0       Trench  05662201-fd19-4993-b9e7-45143fa67dd7  <class '__main__.Site'>\n",
-       "1  Reclamation  bd86fa23-b8ad-4ff4-ac37-40d2b1a69188  <class '__main__.Site'>"
+       "      siteName                                siteID siteClass\n",
+       "0       Trench  05662201-fd19-4993-b9e7-45143fa67dd7      Site\n",
+       "1  Reclamation  bd86fa23-b8ad-4ff4-ac37-40d2b1a69188      Site"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "export_concepts(sites, 'site', 'sites.csv')"
+    "export_concepts(sites, 'site', '_sites.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 93,
    "id": "5e5459b1",
    "metadata": {},
    "outputs": [
@@ -8068,7 +8068,7 @@
        "      <th></th>\n",
        "      <th>vesselName</th>\n",
        "      <th>vesselID</th>\n",
-       "      <th>vesselType</th>\n",
+       "      <th>vesselClass</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -8076,31 +8076,31 @@
        "      <th>0</th>\n",
        "      <td>Carrier A</td>\n",
        "      <td>febb8576-850b-49e0-ba41-a1c91a09dd7d</td>\n",
-       "      <td>&lt;class '__main__.TransportProcessingResource'&gt;</td>\n",
+       "      <td>TransportProcessingResource</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Carrier B</td>\n",
        "      <td>fee60757-2ed4-48be-92f2-b07898c621e2</td>\n",
-       "      <td>&lt;class '__main__.TransportProcessingResource'&gt;</td>\n",
+       "      <td>TransportProcessingResource</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Carrier C</td>\n",
        "      <td>345c4b8f-b72a-40f5-9c8b-e8d8cdbccf89</td>\n",
-       "      <td>&lt;class '__main__.TransportProcessingResource'&gt;</td>\n",
+       "      <td>TransportProcessingResource</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Barge I</td>\n",
        "      <td>0436a5e0-ed4f-48dc-9604-ed7c6f5aab95</td>\n",
-       "      <td>&lt;class '__main__.TransportProcessingResource'&gt;</td>\n",
+       "      <td>TransportProcessingResource</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Cutter T</td>\n",
        "      <td>cd838b4e-e6b2-4d2f-b4c9-54d43fcd323d</td>\n",
-       "      <td>&lt;class '__main__.TransportProcessingResource'&gt;</td>\n",
+       "      <td>TransportProcessingResource</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -8114,26 +8114,26 @@
        "3    Barge I  0436a5e0-ed4f-48dc-9604-ed7c6f5aab95   \n",
        "4   Cutter T  cd838b4e-e6b2-4d2f-b4c9-54d43fcd323d   \n",
        "\n",
-       "                                       vesselType  \n",
-       "0  <class '__main__.TransportProcessingResource'>  \n",
-       "1  <class '__main__.TransportProcessingResource'>  \n",
-       "2  <class '__main__.TransportProcessingResource'>  \n",
-       "3  <class '__main__.TransportProcessingResource'>  \n",
-       "4  <class '__main__.TransportProcessingResource'>  "
+       "                   vesselClass  \n",
+       "0  TransportProcessingResource  \n",
+       "1  TransportProcessingResource  \n",
+       "2  TransportProcessingResource  \n",
+       "3  TransportProcessingResource  \n",
+       "4  TransportProcessingResource  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "export_concepts(vessels, 'vessel', 'vessels.csv')"
+    "export_concepts(vessels, 'vessel', '_vessels.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 94,
    "id": "7e17551f",
    "metadata": {},
    "outputs": [
@@ -8158,75 +8158,91 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>vesselName</th>\n",
-       "      <th>vesselID</th>\n",
-       "      <th>vesselType</th>\n",
+       "      <th>conceptName</th>\n",
+       "      <th>conceptID</th>\n",
+       "      <th>conceptClass</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Carrier A</td>\n",
-       "      <td>febb8576-850b-49e0-ba41-a1c91a09dd7d</td>\n",
-       "      <td>&lt;class '__main__.TransportProcessingResource'&gt;</td>\n",
+       "      <td>Trench</td>\n",
+       "      <td>05662201-fd19-4993-b9e7-45143fa67dd7</td>\n",
+       "      <td>Site</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Carrier B</td>\n",
-       "      <td>fee60757-2ed4-48be-92f2-b07898c621e2</td>\n",
-       "      <td>&lt;class '__main__.TransportProcessingResource'&gt;</td>\n",
+       "      <td>Reclamation</td>\n",
+       "      <td>bd86fa23-b8ad-4ff4-ac37-40d2b1a69188</td>\n",
+       "      <td>Site</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Carrier C</td>\n",
-       "      <td>345c4b8f-b72a-40f5-9c8b-e8d8cdbccf89</td>\n",
-       "      <td>&lt;class '__main__.TransportProcessingResource'&gt;</td>\n",
+       "      <td>Carrier A</td>\n",
+       "      <td>febb8576-850b-49e0-ba41-a1c91a09dd7d</td>\n",
+       "      <td>TransportProcessingResource</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Barge I</td>\n",
-       "      <td>0436a5e0-ed4f-48dc-9604-ed7c6f5aab95</td>\n",
-       "      <td>&lt;class '__main__.TransportProcessingResource'&gt;</td>\n",
+       "      <td>Carrier B</td>\n",
+       "      <td>fee60757-2ed4-48be-92f2-b07898c621e2</td>\n",
+       "      <td>TransportProcessingResource</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Carrier C</td>\n",
+       "      <td>345c4b8f-b72a-40f5-9c8b-e8d8cdbccf89</td>\n",
+       "      <td>TransportProcessingResource</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Barge I</td>\n",
+       "      <td>0436a5e0-ed4f-48dc-9604-ed7c6f5aab95</td>\n",
+       "      <td>TransportProcessingResource</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
        "      <td>Cutter T</td>\n",
        "      <td>cd838b4e-e6b2-4d2f-b4c9-54d43fcd323d</td>\n",
-       "      <td>&lt;class '__main__.TransportProcessingResource'&gt;</td>\n",
+       "      <td>TransportProcessingResource</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  vesselName                              vesselID  \\\n",
-       "0  Carrier A  febb8576-850b-49e0-ba41-a1c91a09dd7d   \n",
-       "1  Carrier B  fee60757-2ed4-48be-92f2-b07898c621e2   \n",
-       "2  Carrier C  345c4b8f-b72a-40f5-9c8b-e8d8cdbccf89   \n",
-       "3    Barge I  0436a5e0-ed4f-48dc-9604-ed7c6f5aab95   \n",
-       "4   Cutter T  cd838b4e-e6b2-4d2f-b4c9-54d43fcd323d   \n",
+       "   conceptName                             conceptID  \\\n",
+       "0       Trench  05662201-fd19-4993-b9e7-45143fa67dd7   \n",
+       "1  Reclamation  bd86fa23-b8ad-4ff4-ac37-40d2b1a69188   \n",
+       "2    Carrier A  febb8576-850b-49e0-ba41-a1c91a09dd7d   \n",
+       "3    Carrier B  fee60757-2ed4-48be-92f2-b07898c621e2   \n",
+       "4    Carrier C  345c4b8f-b72a-40f5-9c8b-e8d8cdbccf89   \n",
+       "5      Barge I  0436a5e0-ed4f-48dc-9604-ed7c6f5aab95   \n",
+       "6     Cutter T  cd838b4e-e6b2-4d2f-b4c9-54d43fcd323d   \n",
        "\n",
-       "                                       vesselType  \n",
-       "0  <class '__main__.TransportProcessingResource'>  \n",
-       "1  <class '__main__.TransportProcessingResource'>  \n",
-       "2  <class '__main__.TransportProcessingResource'>  \n",
-       "3  <class '__main__.TransportProcessingResource'>  \n",
-       "4  <class '__main__.TransportProcessingResource'>  "
+       "                  conceptClass  \n",
+       "0                         Site  \n",
+       "1                         Site  \n",
+       "2  TransportProcessingResource  \n",
+       "3  TransportProcessingResource  \n",
+       "4  TransportProcessingResource  \n",
+       "5  TransportProcessingResource  \n",
+       "6  TransportProcessingResource  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "export_concepts(vessels, 'vessel', 'vessels.csv')"
+    "export_concepts({**sites,**vessels}, 'concept', 'concepts.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6fab257b",
+   "id": "e96d11c7",
    "metadata": {},
    "outputs": [
     {
@@ -8270,7 +8286,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e931466b",
+   "id": "82a5e904",
    "metadata": {},
    "outputs": [
     {
@@ -8426,7 +8442,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e01339ae",
+   "id": "6810dbcd",
    "metadata": {},
    "outputs": [
     {
@@ -13431,7 +13447,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "0e07f630",
+   "id": "811ebc99",
    "metadata": {},
    "outputs": [
     {
@@ -13538,7 +13554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7a74dd9",
+   "id": "c23d318f",
    "metadata": {},
    "outputs": [],
    "source": []
