--- a/notebooks/32_openclsim_opentnsim_moving.ipynb
+++ b/notebooks/32_openclsim_opentnsim_moving.ipynb
@@ -297,7 +297,15 @@
    "execution_count": 11,
    "id": "485057d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mover vessel-01 destination to_site\n"
+     ]
+    }
+   ],
    "source": [
     "# initate the simpy processes defined in the 'move activity' and run simpy\n",
     "openclsim.model.register_processes([activity])\n",
@@ -348,14 +356,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>91436857-3045-49d8-b95b-6772669f6f11</td>\n",
+       "      <td>ef9c3b84-d4c9-4148-9b4f-99af53413719</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>91436857-3045-49d8-b95b-6772669f6f11</td>\n",
-       "      <td>1970-01-01 00:32:16.644459</td>\n",
+       "      <td>ef9c3b84-d4c9-4148-9b4f-99af53413719</td>\n",
+       "      <td>1970-01-01 00:15:42.824591</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -364,8 +372,8 @@
       ],
       "text/plain": [
        "                               Activity                  Timestamp  \\\n",
-       "0  91436857-3045-49d8-b95b-6772669f6f11 1970-01-01 00:00:00.000000   \n",
-       "1  91436857-3045-49d8-b95b-6772669f6f11 1970-01-01 00:32:16.644459   \n",
+       "0  ef9c3b84-d4c9-4148-9b4f-99af53413719 1970-01-01 00:00:00.000000   \n",
+       "1  ef9c3b84-d4c9-4148-9b4f-99af53413719 1970-01-01 00:15:42.824591   \n",
        "\n",
        "  ActivityState  \n",
        "0         START  \n",
@@ -383,9 +391,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
