--- a/notebooks/35_Accessibility_Dredging_with_Priority.ipynb
+++ b/notebooks/35_Accessibility_Dredging_with_Priority.ipynb
@@ -15,24 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "bd1db812",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Location' from 'openclsim.core.priority' (C:\\Users\\asepehri\\github\\OpenCLSim\\src\\openclsim\\core\\priority.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mdatetime\u001b[39;00m\u001b[39m,\u001b[39m \u001b[39mtime\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msimpy\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mopenclsim\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mopentnsim\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
-      "File \u001b[1;32m~\\github\\OpenCLSim\\src\\openclsim\\__init__.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m\"\"\"Top-level package for OpenCLSim.\"\"\"\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mopenclsim\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mcore\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mopenclsim\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mmodel\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mopenclsim\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplot\u001b[39;00m\n",
-      "File \u001b[1;32m~\\github\\OpenCLSim\\src\\openclsim\\core\\__init__.py:13\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39msimpy_object\u001b[39;00m \u001b[39mimport\u001b[39;00m SimpyObject\n\u001b[0;32m     12\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mpriority\u001b[39;00m \u001b[39mimport\u001b[39;00m Priority\n\u001b[1;32m---> 13\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mpriority\u001b[39;00m \u001b[39mimport\u001b[39;00m Location\n\u001b[0;32m     15\u001b[0m __all__ \u001b[39m=\u001b[39m [\n\u001b[0;32m     16\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mbasic\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     17\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mHasContainer\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mPriority\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     33\u001b[0m ]\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'Location' from 'openclsim.core.priority' (C:\\Users\\asepehri\\github\\OpenCLSim\\src\\openclsim\\core\\priority.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import networkx as nx  \n",
     "import shapely.geometry\n",
@@ -52,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "10df29e5",
    "metadata": {},
    "outputs": [],
@@ -64,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "396aa906",
    "metadata": {},
    "outputs": [
@@ -170,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f4953daf",
    "metadata": {},
    "outputs": [],
@@ -181,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6408a82f",
    "metadata": {},
    "outputs": [],
@@ -218,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "197a7c04",
    "metadata": {},
    "outputs": [],
@@ -248,22 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "eb96460b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'my_env' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# prepare input data for vessel_01\u001b[39;00m\n\u001b[0;32m      2\u001b[0m data_vessel01 \u001b[39m=\u001b[39m {\n\u001b[1;32m----> 3\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39menv\u001b[39m\u001b[39m\"\u001b[39m: my_env,\n\u001b[0;32m      4\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mvessel01\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m      5\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mgeometry\u001b[39m\u001b[39m\"\u001b[39m: location_berth, \n\u001b[0;32m      6\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mloading_rate\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m1\u001b[39m,\n\u001b[0;32m      7\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39munloading_rate\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m5\u001b[39m,\n\u001b[0;32m      8\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mcapacity\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m10\u001b[39m,\n\u001b[0;32m      9\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39mdredging_vessel\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     10\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mpriority\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m1\u001b[39m,\n\u001b[0;32m     11\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mcontainer\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39msoil\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     12\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mcompute_v\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mlambda\u001b[39;00m x: \u001b[39m10\u001b[39m \u001b[39m+\u001b[39m \u001b[39m2\u001b[39m \u001b[39m*\u001b[39m x,\n\u001b[0;32m     13\u001b[0m }\n\u001b[0;32m     14\u001b[0m \u001b[39m# instantiate vessel_01 \u001b[39;00m\n\u001b[0;32m     15\u001b[0m vessel01 \u001b[39m=\u001b[39m Vessel_obj_01(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mdata_vessel01)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'my_env' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# prepare input data for vessel_01\n",
     "data_vessel01 = {\n",
@@ -275,7 +249,6 @@
     "    \"capacity\": 10,\n",
     "    \"type\":\"dredging_vessel\",\n",
     "    \"priority\": 1,\n",
-    "    \"container\": \"soil\",\n",
     "    \"compute_v\": lambda x: 10 + 2 * x,\n",
     "}\n",
     "# instantiate vessel_01 \n",
@@ -285,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2329f3f4",
    "metadata": {},
    "outputs": [],
@@ -296,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "6ac4b3d9",
    "metadata": {},
    "outputs": [],
@@ -323,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "da632d50",
    "metadata": {},
    "outputs": [],
@@ -333,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "69f85ca3",
    "metadata": {},
    "outputs": [
@@ -390,32 +363,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ec2fc285",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'activity' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[103], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m display(openclsim\u001b[39m.\u001b[39mplot\u001b[39m.\u001b[39mget_log_dataframe(activity))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'activity' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>ActivityState</th>\n",
+       "      <th>type</th>\n",
+       "      <th>ref</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>387b117a-3678-4c0f-9a4b-da716bbd62c9</td>\n",
+       "      <td>1970-01-01 00:00:00.000000</td>\n",
+       "      <td>START</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>387b117a-3678-4c0f-9a4b-da716bbd62c9</td>\n",
+       "      <td>1970-01-01 00:00:00.000000</td>\n",
+       "      <td>START</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>e2bf26b5-b2fb-4ece-a3fe-c4b42352ef16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>387b117a-3678-4c0f-9a4b-da716bbd62c9</td>\n",
+       "      <td>1970-01-01 00:00:00.000000</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>e2bf26b5-b2fb-4ece-a3fe-c4b42352ef16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>387b117a-3678-4c0f-9a4b-da716bbd62c9</td>\n",
+       "      <td>1970-01-01 00:00:00.000000</td>\n",
+       "      <td>START</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>af244b51-2be1-4de1-a572-299a13088fc6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>387b117a-3678-4c0f-9a4b-da716bbd62c9</td>\n",
+       "      <td>1970-01-01 00:00:10.000000</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>af244b51-2be1-4de1-a572-299a13088fc6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>387b117a-3678-4c0f-9a4b-da716bbd62c9</td>\n",
+       "      <td>1970-01-01 08:49:59.864804</td>\n",
+       "      <td>START</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>03df71a3-a66d-4e81-9fa6-a7f2229734ef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>387b117a-3678-4c0f-9a4b-da716bbd62c9</td>\n",
+       "      <td>1970-01-01 09:16:39.958986</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>03df71a3-a66d-4e81-9fa6-a7f2229734ef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>387b117a-3678-4c0f-9a4b-da716bbd62c9</td>\n",
+       "      <td>1970-01-01 09:16:39.958986</td>\n",
+       "      <td>START</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>3dd59b97-352b-4e81-bb79-fdb9bf26d99d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>387b117a-3678-4c0f-9a4b-da716bbd62c9</td>\n",
+       "      <td>1970-01-01 09:16:41.958986</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>subprocess</td>\n",
+       "      <td>3dd59b97-352b-4e81-bb79-fdb9bf26d99d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>387b117a-3678-4c0f-9a4b-da716bbd62c9</td>\n",
+       "      <td>1970-01-01 09:16:41.958986</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>82 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Activity                  Timestamp  \\\n",
+       "0   387b117a-3678-4c0f-9a4b-da716bbd62c9 1970-01-01 00:00:00.000000   \n",
+       "1   387b117a-3678-4c0f-9a4b-da716bbd62c9 1970-01-01 00:00:00.000000   \n",
+       "2   387b117a-3678-4c0f-9a4b-da716bbd62c9 1970-01-01 00:00:00.000000   \n",
+       "3   387b117a-3678-4c0f-9a4b-da716bbd62c9 1970-01-01 00:00:00.000000   \n",
+       "4   387b117a-3678-4c0f-9a4b-da716bbd62c9 1970-01-01 00:00:10.000000   \n",
+       "..                                   ...                        ...   \n",
+       "77  387b117a-3678-4c0f-9a4b-da716bbd62c9 1970-01-01 08:49:59.864804   \n",
+       "78  387b117a-3678-4c0f-9a4b-da716bbd62c9 1970-01-01 09:16:39.958986   \n",
+       "79  387b117a-3678-4c0f-9a4b-da716bbd62c9 1970-01-01 09:16:39.958986   \n",
+       "80  387b117a-3678-4c0f-9a4b-da716bbd62c9 1970-01-01 09:16:41.958986   \n",
+       "81  387b117a-3678-4c0f-9a4b-da716bbd62c9 1970-01-01 09:16:41.958986   \n",
+       "\n",
+       "   ActivityState        type                                   ref  \n",
+       "0          START         NaN                                   NaN  \n",
+       "1          START  subprocess  e2bf26b5-b2fb-4ece-a3fe-c4b42352ef16  \n",
+       "2           STOP  subprocess  e2bf26b5-b2fb-4ece-a3fe-c4b42352ef16  \n",
+       "3          START  subprocess  af244b51-2be1-4de1-a572-299a13088fc6  \n",
+       "4           STOP  subprocess  af244b51-2be1-4de1-a572-299a13088fc6  \n",
+       "..           ...         ...                                   ...  \n",
+       "77         START  subprocess  03df71a3-a66d-4e81-9fa6-a7f2229734ef  \n",
+       "78          STOP  subprocess  03df71a3-a66d-4e81-9fa6-a7f2229734ef  \n",
+       "79         START  subprocess  3dd59b97-352b-4e81-bb79-fdb9bf26d99d  \n",
+       "80          STOP  subprocess  3dd59b97-352b-4e81-bb79-fdb9bf26d99d  \n",
+       "81          STOP         NaN                                   NaN  \n",
+       "\n",
+       "[82 rows x 5 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "display(openclsim.plot.get_log_dataframe(activity))"
+    "display(openclsim.plot.get_log_dataframe(while_activity))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2164d1a",
+   "id": "04a3941e",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a2164d1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1783551121.py, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[27], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    \"route\": path,                       # required by Routeable\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# define a path into and out of the habour\n",
     "path1 = nx.dijkstra_path(my_env.graph, 'offshore', 'berth')\n",
