--- a/notebooks/32_openclsim_opentnsim_moving.ipynb
+++ b/notebooks/32_openclsim_opentnsim_moving.ipynb
@@ -147,7 +147,7 @@
     "data_from_site = {\n",
     "    \"env\": env,\n",
     "    \"name\": \"from_site\",\n",
-    "    \"geometry\": location_to_site,\n",
+    "    \"geometry\": location_from_site,\n",
     "    \"capacity\": 100,\n",
     "    \"level\": 100,\n",
     "}\n",
@@ -297,7 +297,18 @@
    "execution_count": 11,
    "id": "485057d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mover vessel-01 destination to_site\n",
+      "passing edge from_site to_site\n",
+      "mover vessel-01 is now at POINT (4.25222222 52.11428333)\n",
+      "mover vessel-01 is now at POINT (4.25222222 52.11428333)\n"
+     ]
+    }
+   ],
    "source": [
     "# initate the simpy processes defined in the 'move activity' and run simpy\n",
     "openclsim.model.register_processes([activity])\n",
@@ -348,14 +359,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>91436857-3045-49d8-b95b-6772669f6f11</td>\n",
+       "      <td>4260f129-7451-44cd-baa8-89373a5c8521</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>91436857-3045-49d8-b95b-6772669f6f11</td>\n",
-       "      <td>1970-01-01 00:32:16.644459</td>\n",
+       "      <td>4260f129-7451-44cd-baa8-89373a5c8521</td>\n",
+       "      <td>1970-01-01 00:16:33.819868</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -364,8 +375,8 @@
       ],
       "text/plain": [
        "                               Activity                  Timestamp  \\\n",
-       "0  91436857-3045-49d8-b95b-6772669f6f11 1970-01-01 00:00:00.000000   \n",
-       "1  91436857-3045-49d8-b95b-6772669f6f11 1970-01-01 00:32:16.644459   \n",
+       "0  4260f129-7451-44cd-baa8-89373a5c8521 1970-01-01 00:00:00.000000   \n",
+       "1  4260f129-7451-44cd-baa8-89373a5c8521 1970-01-01 00:16:33.819868   \n",
        "\n",
        "  ActivityState  \n",
        "0         START  \n",
