--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -81,11 +81,9 @@
     "TransportProcessingResource = type(\n",
     "    \"TransportProcessingResource\",\n",
     "    (\n",
-    "        core.Identifiable,\n",
-    "        core.Log,\n",
-    "        core.ContainerDependentMovable,\n",
     "        core.HasResource,\n",
     "        core.Processor,\n",
+    "        core.ContainerDependentMovable,\n",
     "    ),\n",
     "    {},\n",
     ")"
@@ -237,13 +235,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>59203ad4-964b-4fe9-a427-24f7025dc725</td>\n",
+       "      <td>88ed2a20-c6ea-4e59-9671-459d6a313ae2</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>59203ad4-964b-4fe9-a427-24f7025dc725</td>\n",
+       "      <td>88ed2a20-c6ea-4e59-9671-459d6a313ae2</td>\n",
        "      <td>1970-01-01 00:15:42.824591</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
@@ -253,8 +251,8 @@
       ],
       "text/plain": [
        "                               Activity                  Timestamp  \\\n",
-       "0  59203ad4-964b-4fe9-a427-24f7025dc725 1970-01-01 00:00:00.000000   \n",
-       "1  59203ad4-964b-4fe9-a427-24f7025dc725 1970-01-01 00:15:42.824591   \n",
+       "0  88ed2a20-c6ea-4e59-9671-459d6a313ae2 1970-01-01 00:00:00.000000   \n",
+       "1  88ed2a20-c6ea-4e59-9671-459d6a313ae2 1970-01-01 00:15:42.824591   \n",
        "\n",
        "  ActivityState  \n",
        "0         START  \n",
@@ -367,8 +365,8 @@
        "      <th>Activity</th>\n",
        "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
-       "      <th>geometry</th>\n",
        "      <th>container level</th>\n",
+       "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -377,29 +375,29 @@
        "      <td>Move activity</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
-       "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Move activity</td>\n",
        "      <td>1970-01-01 00:15:42.824591</td>\n",
        "      <td>STOP</td>\n",
-       "      <td>POINT (4.25222222 52.11428333)</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>POINT (4.25222222 52.11428333)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Activity                  Timestamp ActivityState  \\\n",
-       "0  Move activity 1970-01-01 00:00:00.000000         START   \n",
-       "1  Move activity 1970-01-01 00:15:42.824591          STOP   \n",
+       "        Activity                  Timestamp ActivityState  container level  \\\n",
+       "0  Move activity 1970-01-01 00:00:00.000000         START              0.0   \n",
+       "1  Move activity 1970-01-01 00:15:42.824591          STOP              0.0   \n",
        "\n",
-       "                         geometry  container level  \n",
-       "0  POINT (4.18055556 52.18664444)              0.0  \n",
-       "1  POINT (4.25222222 52.11428333)              0.0  "
+       "                         geometry  \n",
+       "0  POINT (4.18055556 52.18664444)  \n",
+       "1  POINT (4.25222222 52.11428333)  "
       ]
      },
      "metadata": {},
@@ -434,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
