fix old class orders in docs

--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -81,9 +81,10 @@
     "TransportProcessingResource = type(\n",
     "    \"TransportProcessingResource\",\n",
     "    (\n",
-    "        core.HasResource,\n",
     "        core.Processor,\n",
     "        core.ContainerDependentMovable,\n",
+    "        core.Identifiable,\n",
+    "        core.HasResource,\n",
     "    ),\n",
     "    {},\n",
     ")"
@@ -139,7 +140,7 @@
     "                 \"compute_v\": lambda x: 10\n",
     "               }\n",
     "# instantiate vessel_01 \n",
-    "vessel01 = TransportProcessingResource(**data_vessel01)"
+    "vessel01 = TransportProcessingResource(**data_vessel01)\n"
    ]
   },
   {
@@ -235,13 +236,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>88ed2a20-c6ea-4e59-9671-459d6a313ae2</td>\n",
+       "      <td>116be63e-1901-496a-9487-dcf5756e2e8f</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>88ed2a20-c6ea-4e59-9671-459d6a313ae2</td>\n",
+       "      <td>116be63e-1901-496a-9487-dcf5756e2e8f</td>\n",
        "      <td>1970-01-01 00:15:42.824591</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
@@ -251,8 +252,8 @@
       ],
       "text/plain": [
        "                               Activity                  Timestamp  \\\n",
-       "0  88ed2a20-c6ea-4e59-9671-459d6a313ae2 1970-01-01 00:00:00.000000   \n",
-       "1  88ed2a20-c6ea-4e59-9671-459d6a313ae2 1970-01-01 00:15:42.824591   \n",
+       "0  116be63e-1901-496a-9487-dcf5756e2e8f 1970-01-01 00:00:00.000000   \n",
+       "1  116be63e-1901-496a-9487-dcf5756e2e8f 1970-01-01 00:15:42.824591   \n",
        "\n",
        "  ActivityState  \n",
        "0         START  \n",
