--- a/notebooks/03_ShiftAmountActivity.ipynb
+++ b/notebooks/03_ShiftAmountActivity.ipynb
@@ -367,8 +367,8 @@
        "      <th>Activity</th>\n",
        "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
-       "      <th>geometry</th>\n",
        "      <th>container level</th>\n",
+       "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -377,29 +377,29 @@
        "      <td>Shift amount activity</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
-       "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Shift amount activity</td>\n",
        "      <td>1970-01-01 00:01:00</td>\n",
        "      <td>STOP</td>\n",
-       "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                Activity           Timestamp ActivityState  \\\n",
-       "0  Shift amount activity 1970-01-01 00:00:00         START   \n",
-       "1  Shift amount activity 1970-01-01 00:01:00          STOP   \n",
+       "                Activity           Timestamp ActivityState  container level  \\\n",
+       "0  Shift amount activity 1970-01-01 00:00:00         START              0.0   \n",
+       "1  Shift amount activity 1970-01-01 00:01:00          STOP              5.0   \n",
        "\n",
-       "                         geometry  container level  \n",
-       "0  POINT (4.18055556 52.18664444)              0.0  \n",
-       "1  POINT (4.18055556 52.18664444)              5.0  "
+       "                         geometry  \n",
+       "0  POINT (4.18055556 52.18664444)  \n",
+       "1  POINT (4.18055556 52.18664444)  "
       ]
      },
      "metadata": {},
