--- a/notebooks/33_Accessibility_Dredging_NoTide.ipynb
+++ b/notebooks/33_Accessibility_Dredging_NoTide.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4b621a99",
    "metadata": {},
    "outputs": [],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d272ff48",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a22e6a3f",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "67e9ea06",
    "metadata": {},
    "outputs": [
@@ -547,10 +547,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e96e09e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>ActivityState</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>container level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sailing empty dredging vessel</td>\n",
+       "      <td>1970-01-01 00:00:00.000000</td>\n",
+       "      <td>START</td>\n",
+       "      <td>POINT (4.1795229742823 52.11590591837503)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sailing empty dredging vessel</td>\n",
+       "      <td>1970-01-01 00:32:00.113018</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>loading dredging vessel</td>\n",
+       "      <td>1970-01-01 00:32:00.113018</td>\n",
+       "      <td>START</td>\n",
+       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>loading dredging vessel</td>\n",
+       "      <td>1970-01-01 00:40:20.113018</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>sailing full dredging vessel</td>\n",
+       "      <td>1970-01-01 00:40:20.113018</td>\n",
+       "      <td>START</td>\n",
+       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>loading dredging vessel</td>\n",
+       "      <td>1970-01-01 10:03:01.770622</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>sailing full dredging vessel</td>\n",
+       "      <td>1970-01-01 10:03:01.770622</td>\n",
+       "      <td>START</td>\n",
+       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>sailing full dredging vessel</td>\n",
+       "      <td>1970-01-01 10:32:07.327912</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>POINT (4.1795229742823 52.11590591837503)</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>unloading dredging vessel</td>\n",
+       "      <td>1970-01-01 10:32:07.327912</td>\n",
+       "      <td>START</td>\n",
+       "      <td>POINT (4.1795229742823 52.11590591837503)</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>unloading dredging vessel</td>\n",
+       "      <td>1970-01-01 10:35:27.327912</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>POINT (4.1795229742823 52.11590591837503)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>72 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Activity                  Timestamp ActivityState  \\\n",
+       "0   sailing empty dredging vessel 1970-01-01 00:00:00.000000         START   \n",
+       "1   sailing empty dredging vessel 1970-01-01 00:32:00.113018          STOP   \n",
+       "2         loading dredging vessel 1970-01-01 00:32:00.113018         START   \n",
+       "3         loading dredging vessel 1970-01-01 00:40:20.113018          STOP   \n",
+       "4    sailing full dredging vessel 1970-01-01 00:40:20.113018         START   \n",
+       "..                            ...                        ...           ...   \n",
+       "67        loading dredging vessel 1970-01-01 10:03:01.770622          STOP   \n",
+       "68   sailing full dredging vessel 1970-01-01 10:03:01.770622         START   \n",
+       "69   sailing full dredging vessel 1970-01-01 10:32:07.327912          STOP   \n",
+       "70      unloading dredging vessel 1970-01-01 10:32:07.327912         START   \n",
+       "71      unloading dredging vessel 1970-01-01 10:35:27.327912          STOP   \n",
+       "\n",
+       "                                       geometry  container level  \n",
+       "0     POINT (4.1795229742823 52.11590591837503)              0.0  \n",
+       "1   POINT (4.062705498083785 51.95909715255291)              0.0  \n",
+       "2   POINT (4.062705498083785 51.95909715255291)              0.0  \n",
+       "3   POINT (4.062705498083785 51.95909715255291)             10.0  \n",
+       "4   POINT (4.062705498083785 51.95909715255291)             10.0  \n",
+       "..                                          ...              ...  \n",
+       "67  POINT (4.062705498083785 51.95909715255291)              5.0  \n",
+       "68  POINT (4.062705498083785 51.95909715255291)              5.0  \n",
+       "69    POINT (4.1795229742823 52.11590591837503)              5.0  \n",
+       "70    POINT (4.1795229742823 52.11590591837503)              5.0  \n",
+       "71    POINT (4.1795229742823 52.11590591837503)              0.0  \n",
+       "\n",
+       "[72 rows x 5 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Inspect dredging vessel log\n",
     "display(plot.get_log_dataframe(vessel01, [activities_dredging_vessel]))"
@@ -558,10 +714,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f920e9e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>ActivityState</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>container level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sailing full seagoing vessel</td>\n",
+       "      <td>1970-01-01 00:03:20.000000</td>\n",
+       "      <td>START</td>\n",
+       "      <td>POINT (3.637610458072877 52.10701582514347)</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sailing full seagoing vessel</td>\n",
+       "      <td>1970-01-01 00:38:13.474629</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>unloading seagoing vessel</td>\n",
+       "      <td>1970-01-01 00:40:20.113018</td>\n",
+       "      <td>START</td>\n",
+       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>unloading seagoing vessel</td>\n",
+       "      <td>1970-01-01 00:45:20.113018</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>sailing empty seagoing vessel</td>\n",
+       "      <td>1970-01-01 00:45:20.113018</td>\n",
+       "      <td>START</td>\n",
+       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>sailing empty seagoing vessel</td>\n",
+       "      <td>1970-01-01 01:22:33.152622</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>POINT (3.637610458072877 52.10701582514347)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Activity                  Timestamp ActivityState  \\\n",
+       "0   sailing full seagoing vessel 1970-01-01 00:03:20.000000         START   \n",
+       "1   sailing full seagoing vessel 1970-01-01 00:38:13.474629          STOP   \n",
+       "2      unloading seagoing vessel 1970-01-01 00:40:20.113018         START   \n",
+       "3      unloading seagoing vessel 1970-01-01 00:45:20.113018          STOP   \n",
+       "4  sailing empty seagoing vessel 1970-01-01 00:45:20.113018         START   \n",
+       "5  sailing empty seagoing vessel 1970-01-01 01:22:33.152622          STOP   \n",
+       "\n",
+       "                                      geometry  container level  \n",
+       "0  POINT (3.637610458072877 52.10701582514347)                5  \n",
+       "1  POINT (4.062705498083785 51.95909715255291)                5  \n",
+       "2  POINT (4.062705498083785 51.95909715255291)                5  \n",
+       "3  POINT (4.062705498083785 51.95909715255291)                0  \n",
+       "4  POINT (4.062705498083785 51.95909715255291)                0  \n",
+       "5  POINT (3.637610458072877 52.10701582514347)                0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Inspect seagoing vessel log\n",
     "display(plot.get_log_dataframe(vessel02, [activities_seagoing_vessel]))"
@@ -577,10 +836,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "fba2bcc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sailing_crit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\asepehri\\github\\OpenCLSim\\notebooks\\33_Accessibility_Dredging_NoTide.ipynb Cell 26\u001b[0m line \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m data \u001b[39m=\u001b[39m res[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m layout \u001b[39m=\u001b[39m res[\u001b[39m'\u001b[39m\u001b[39mlayout\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m data\u001b[39m.\u001b[39mappend({\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39msailing_crit\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mx\u001b[39m\u001b[39m\"\u001b[39m:[vessel01\u001b[39m.\u001b[39mlog[\u001b[39m\"\u001b[39m\u001b[39mTimestamp\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39misoformat(), vessel01\u001b[39m.\u001b[39mlog[\u001b[39m\"\u001b[39m\u001b[39mTimestamp\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39misoformat()],\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m:[sailing_crit\u001b[39m.\u001b[39mminimum,sailing_crit\u001b[39m.\u001b[39mminimum],\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m })\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m data\u001b[39m.\u001b[39mappend({\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39msailing_crit\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mx\u001b[39m\u001b[39m\"\u001b[39m:[vessel02\u001b[39m.\u001b[39mlog[\u001b[39m\"\u001b[39m\u001b[39mTimestamp\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39misoformat(), vessel02\u001b[39m.\u001b[39mlog[\u001b[39m\"\u001b[39m\u001b[39mTimestamp\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39misoformat()],\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m:[sailing_crit\u001b[39m.\u001b[39mminimum,sailing_crit\u001b[39m.\u001b[39mminimum],\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m })\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m data\u001b[39m.\u001b[39mappend({\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mDepth\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mx\u001b[39m\u001b[39m\"\u001b[39m:depth_df\u001b[39m.\u001b[39mindex,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m:depth_df[sailing_crit\u001b[39m.\u001b[39mcondition],\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m })\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sailing_crit' is not defined"
+     ]
+    }
+   ],
    "source": [
     "res = plot.get_gantt_chart([vessel01, vessel02], y_scale=\"numbers\", static=True, id_map=[activities_dredging_vessel, activities_seagoing_vessel])\n",
     "data = res['data']\n",
