--- a/notebooks/37_Claim_Berth_Interference.ipynb
+++ b/notebooks/37_Claim_Berth_Interference.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c3bb6ca2",
    "metadata": {},
@@ -22,7 +21,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c90ad146",
    "metadata": {},
@@ -58,7 +56,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0b62c670",
    "metadata": {},
@@ -79,7 +76,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3d9fb496",
    "metadata": {},
@@ -128,7 +124,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c900ac62",
    "metadata": {},
@@ -137,7 +132,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a53ca26d",
    "metadata": {},
@@ -201,7 +195,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "11f711d8",
    "metadata": {},
@@ -300,7 +293,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "176c64e8",
    "metadata": {},
@@ -397,7 +389,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cecba605",
    "metadata": {},
@@ -543,7 +534,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4692b789",
    "metadata": {},
@@ -625,7 +615,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c2b0490e",
    "metadata": {},
@@ -634,7 +623,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cf76e6ec",
    "metadata": {},
@@ -926,7 +914,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "890cf974",
    "metadata": {},
@@ -2358,7 +2345,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "187697e1",
    "metadata": {},
@@ -2413,7 +2399,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2427,7 +2413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
